# rust-wasm-demo

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
www/: package.json  vite.config.ts
www/src/: App.vue
www/src/wasm/: hello_wasm_bg.wasm
www2/: index.html
