[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }
console_error_panic_hook = "0.1.7"

[profile.dev]
lto = true
opt-level = 3

[profile.release]
lto = true
opt-level = 3
